Altraçoes na ficha e adiçao de numeros quebrados

--- a/css/style.css
+++ b/css/style.css
@@ -600,7 +600,8 @@ Painel De Regras
   .barra-status,
   .dropdown,
   .btn,
-  .toggle {
+  .toggle,
+  #painelRegras {
     display: none !important;
   }
 
